# rikudo

./: LICENSE  Makefile  README.md  meson.build  rikudo_fifo_read.sh  rikudo_fifo_write.sh
.github/workflows/: main.yml
grid/: easy_1.grid  easy_2.grid  easy_3.grid  easy_4.grid  easy_html_1.grid  midle_1.grid
src/: main.c  neighbors.h  opts.c  opts.h  opts_def.h  parser.c  parser.h  pretty_print.c  pretty_print.h  rikudo.c  rikudo.h  rikudo_36.h  rikudo_60.h  rikudo_cfg.h  rikudo_connex.c  rikudo_connex.h  rikudo_grid.c  rikudo_grid.h  rikudo_ia.c  rikudo_ia.h  rikudo_macro.h  rikudo_pos.h  rikudo_read.c  rikudo_read.h  rikudo_reverse.c  rikudo_reverse.h  rikudo_stack.c  rikudo_stack.h  rikudo_x.c  rikudo_x.h  solve.c  solve.h
src/X/: rikudo_play.c  rikudo_play.h  rikudo_x.c
src/profil/: rikudo_cycle.c  rikudo_cycle.h  rikudo_stat.c  rikudo_stat.h
src/reverse/: rikudo_reverse.c  rikudo_reverse.h
test/: rikudo_test.sh
test/grid/: easy_1.grid  easy_10.grid  easy_2.grid  easy_3.grid  easy_4.grid  easy_5.grid  easy_6.grid  easy_7.grid  easy_8.grid  easy_9.grid  hard_1.grid  mid_1.grid  mid_10.grid  mid_2.grid  mid_3.grid  mid_4.grid  mid_5.grid  mid_6.grid  mid_7.grid  mid_8.grid  mid_9.grid
tests/: meson.build  test_beginner.c  test_common.h  test_create.c  test_easy.c  test_medium.c
